# whatsim

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/skills/: e2e-testing.md  implement.md  pm.md
crates/whatsim-core/: Cargo.toml
crates/whatsim-core/src/: config.rs  errors.rs  events.rs  lib.rs  types.rs
crates/whatsim-provider-meta/: Cargo.toml
crates/whatsim-provider-meta/src/: generate.rs  lib.rs  outbound.rs  webhook_payload.rs
crates/whatsim-server/: Cargo.toml
crates/whatsim-server/src/: assets.rs  errors.rs  lib.rs  main.rs  state.rs
crates/whatsim-server/src/routes/: config.rs  conversations.rs  events.rs  health.rs  messages.rs  mock_meta.rs  mod.rs  stream.rs
crates/whatsim-server/tests/: api_test.rs
crates/whatsim-simulator/: Cargo.toml
crates/whatsim-simulator/src/: inbound.rs  lib.rs
crates/whatsim-storage/: Cargo.toml
crates/whatsim-storage/src/: lib.rs  memory.rs
web/: index.html  package-lock.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  api.ts  types.ts
web/src/components/: ChatPanel.tsx  ConversationList.tsx  EmptyState.tsx  InspectorPanel.tsx  NewConversationDialog.tsx
web/src/hooks/: useSSE.ts
