[package]
name = "whatsim-server"
version.workspace = true
edition.workspace = true

[lib]
name = "whatsim_server"
path = "src/lib.rs"

[[bin]]
name = "whatsim"
path = "src/main.rs"

[dependencies]
whatsim-core = { workspace = true }
whatsim-storage = { workspace = true }
whatsim-provider-meta = { workspace = true }
whatsim-simulator = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rust-embed = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
mime_guess = "2"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-core = "0.3"

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
