[package]
name = "whatsim-simulator"
version.workspace = true
edition.workspace = true

[dependencies]
whatsim-core = { workspace = true }
whatsim-provider-meta = { workspace = true }
whatsim-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
