[package]
name = "whatsim-storage"
version.workspace = true
edition.workspace = true

[dependencies]
whatsim-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
